# tridot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  client.cfg  common.cfg  config.txt  configEditor.txt  configGame.txt  editor.cfg  editor.ini  game.cfg  host.cfg  layout.ini  server.cfg
assets/materials/: brick.mat  emissive.mat  grass.mat  marble.mat  metal.mat  wood.mat
assets/scenes/: empty.scene  physics.scene  test.scene
assets/shaders/: ambientLight.glsl  base.glsl  bloom.glsl  blur.glsl  boxBlur.glsl  colorGrading.glsl  composit.glsl  deferredPBR.glsl  deferredPointLights.glsl  directionalLight.glsl  forwardPBR.glsl  gammaCorrection.glsl  gaussianBlur.glsl  geometry.glsl  mesh.glsl  outline.glsl  pbr.glsl  pointLight.glsl  shadow.glsl  simple.glsl  skybox.glsl  spotLight.glsl  ssao.glsl
assets/shaders/base/: geometryOutput.glsl  instanceInput.glsl  pbr.glsl  sampleTexture.glsl  sampleTextureIndexed.glsl  uEnvironment.glsl  uMaterials.glsl  vertexInput.glsl
assets/shaders/pre_refactor/: base.glsl  bloom.glsl  deferredPBR.glsl  forwardPBR.glsl  instance.glsl  mesh.glsl  ssao.glsl
examples/template/: .gitignore  CMakeLists.txt  config.txt  configEditor.txt  configGame.txt  editor.cfg  editor.ini
examples/template/data/: template.scene  template.tmap
examples/template/scripts/: build.bat  build_debug.bat  clean.bat  deploy.bat
examples/template/src/: example.cpp  template.cpp
master/res/default/: editor.ini  flags.ini
res/: config.txt  editor.ini
res/materials/: m1.mat  m5.mat  ui.mat
res/prefabs/: cubes.prefab  gold.prefab  wood.prefab
res/scenes/: cubes.scene  empty.scene  physics.scene  scene.yml  test.scene
res/shaders/: PBR.glsl  base.glsl  blur.glsl  gray.glsl  mesh.glsl  meshBase.glsl  meshTextureScale.glsl  pbr.glsl  shader.glsl  shadow.glsl  skybox.glsl
scripts/: build.bat  build_and_deploy.bat  build_debug.bat  cmake.bat  deploy.bat
src/: pch.h  tridot.h
src/animation/: Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  AnimationSystem.cpp
src/animationEditor/: AnimationWindow.cpp
src/audio/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h
src/core/: Console.cpp  Console.h  CrashHandler.cpp  CrashHandler.h  Environment.cpp  Environment.h  EventManager.cpp  EventManager.h  FileWatcher.cpp  FileWatcher.h  JobManager.cpp  JobManager.h  JobSystem.cpp  JobSystem.h  MainLoop.cpp  MainLoop.h  Module.h  ModuleManager.cpp  ModuleManager.h  Profiler.cpp  Profiler.h  Reflection.cpp  Reflection.h  SignalManager.h  System.h  SystemManager.cpp  SystemManager.h  ThreadManager.cpp  ThreadManager.h  ThreadPool.cpp  config.cpp  config.h  core.h
src/core/util/: Ref.h  (+5 more)
src/debugMenu/: ConsoleWindow.cpp  DebugMenu.cpp  DebugMenu.h  ModulesWindow.cpp  ProfilerWindow.cpp
src/editor/: AssetBrowser.cpp  AssetBrowserWindow.cpp  ClassUI.cpp  ClassUI.h  ConsolePanel.cpp  ConsolePanel.h  ConsoleWindow.cpp  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorElement.h  EditorGui.cpp  EditorGui.h  EditorWindow.h  EntitiesInfoWindow.cpp  EntitiesPanel.cpp  EntitiesPanel.h  EntitiesWindow.cpp  EntityOperations.cpp  EntityOperations.h  FileBrowser.cpp  FileBrowser.h  Gizmos.cpp  Gizmos.h  Gui.cpp  Gui.h  Imgui.cpp  MaterialWindow.cpp  MaterialsWindow.cpp  ProfilerPanel.cpp  ProfilerPanel.h  ProfilerWindow.cpp  PropertiesPanel.cpp  PropertiesPanel.h  PropertiesWindow.cpp  PropertiesWindow.h  RenderPipelineWindow.cpp  RenderStatisticsWindow.cpp  ResourceBrowser.cpp  (+26 more)
src/engine/: Archive.cpp  Archive.h  Asset.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Color.cpp  Color.h  ComponentCache.cpp  ComponentCache.h  EntityEvent.cpp  EntityEvent.h  EntityInfo.cpp  EntityInfo.h  EntityUtil.cpp  EntityUtil.h  Input.cpp  Input.h  Light.cpp  Light.h  MainLoop.cpp  MainLoop.h  Map.cpp  Map.h  MeshComponent.cpp  MeshComponent.h  MetaTypes.cpp  MetaTypes.h  Physics.cpp  Physics.h  PostProcess.cpp  PostProcessingSettings.cpp  PostProcessingSettings.h  Prefab.cpp  Prefab.h  Random.cpp  Random.h  (+13 more)
src/entity/: ComponentBuffer.cpp  ComponentBuffer.h  ComponentPool.cpp  ComponentPool.h  ComponentStorage.cpp  ComponentStorage.h  DynamicObjectBuffer.cpp  DynamicObjectBuffer.h  EntityView.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  World.cpp  World.h
src/gameplay/: FirstPersonCameraController.cpp  FirstPersonCameraController.h  Hitbox.cpp  Hitbox.h  MapTransition.cpp  PlatformerPlayerController.cpp  PlatformerPlayerController.h  ShootingPlayerController.cpp  ThirdPersonCameraController.cpp  ThirdPersonCameraController.h  TimeTrigger.cpp  TriggerBox.cpp
src/launcher/: main.cpp  setup.cpp  test.cpp
src/modules/: Module1.cpp  Module2.cpp
src/network/: Connection.cpp  Connection.h  Endpoint.cpp  Endpoint.h  GameMode.cpp  GameMode.h  NetworkComponent.cpp  NetworkComponent.h  NetworkManager.cpp  NetworkManager.h  NetworkReplication.cpp  NetworkReplication.h  NetworkSystem.cpp  NetworkSystem.h  Packet.cpp  Packet.h  PropertyReplication.cpp  PropertyReplication.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
src/particleSystem/: ParticleEmitter.cpp  ParticleEmitter.h
src/physics/: Collider.cpp  Collider.h  Physics.cpp  Physics.h  RigidBody.cpp  RigidBody.h
src/pre_refactor/: CMakeLists.txt  pch.h
src/render/: BatchBuffer.cpp  BatchBuffer.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Color.h  FrameBuffer.cpp  FrameBuffer.h  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PostProcess.cpp  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderSettings.cpp  RenderSettings.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderState.h  TestUI.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  enum.cpp  (+1 more)
src/test/: ecsTest.cpp  test.cpp
src/window/: Input.cpp  Input.h  RenderContext.cpp  RenderContext.h  UIManager.cpp  UIManager.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
test/: test.cpp
(+306 files in other folders)
